---------------------------------------------------------------------------
Version 4.7.4  [v4-???] (rgerhards), 2010-11-??
- bugfix: atomic increment for msg object may not work correct on all
  platforms. Thanks to Chris Metcalf for the patch
---------------------------------------------------------------------------
Version 4.7.3  [v4-devel] (rgerhards), 2010-11-25
- bugfix(important): problem in TLS handling could cause rsyslog to loop
  in a tight loop, effectively disabling functionality and bearing the
  risk of unresponsiveness of the whole system.
  Bug tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=194
- added omuxsock, which permits to write message to local Unix sockets
  this is the counterpart to imuxsock, enabling fast local forwarding
- added imptcp, a simplified, Linux-specific and potentielly fast
  syslog plain tcp input plugin (NOT supporting TLS!)
- bugfix: a couple of problems that imfile had on some platforms, namely
  Ubuntu (not their fault, but occured there)
- bugfix: imfile utilizes 32 bit to track offset. Most importantly,
  this problem can not experienced on Fedora 64 bit OS (which has
  64 bit long's!)
- added the $InputFilePersistStateInterval config directive to imfile
- changed imfile so that the state file is never deleted (makes imfile
  more robust in regard to fatal failures)
---------------------------------------------------------------------------
Version 4.7.2  [v4-devel] (rgerhards), 2010-05-03
- bugfix: problems with atomic operations emulaton
  replaced atomic operation emulation with new code. The previous code
  seemed to have some issue and also limited concurrency severely. The
  whole atomic operation emulation has been rewritten.
- added new $Sleep directive to hold processing for a couple of seconds
  during startup
- bugfix: programname filter in ! configuration can not be reset
  Thanks to Kiss Gabor for the patch.
---------------------------------------------------------------------------