@@ -64,6 +64,7 @@ static int option_DisallowWarning = 1;	/* complain if message from disallowed se
 static int bDisableDNS = 0; /* don't look up IP addresses of remote messages */
 static prop_t *propLocalHostName = NULL;/* our hostname as FQDN - read-only after startup */
 static uchar *LocalHostName = NULL;/* our hostname  - read-only after startup */
+static uchar *LocalHostNameOverride = NULL;/* user-overridden hostname - read-only after startup */
 static uchar *LocalFQDNName = NULL;/* our hostname as FQDN - read-only after startup */
 static uchar *LocalDomain;	/* our local domain name  - read-only after startup */
 static char **StripDomains = NULL;/* these domains may be stripped before writing logs  - r/o after s.u., never touched by init */
@@ -153,17 +154,21 @@ GenerateLocalHostNameProperty(void)
 	uchar *pszName;
 
 	if(propLocalHostName != NULL)
-		prop.Destruct(&propLocalHostName);
 
 	CHKiRet(prop.Construct(&propLocalHostName));
-	if(LocalHostName == NULL)
-		pszName = (uchar*) "[localhost]";
-	else {
-		if(GetPreserveFQDN() == 1)
-			pszName = LocalFQDNName;
-		else
-			pszName = LocalHostName;
+	if(LocalHostNameOverride == NULL) {
+		if(LocalHostName == NULL)
+			pszName = (uchar*) "[localhost]";
+		else {
+			if(GetPreserveFQDN() == 1)
+				pszName = LocalFQDNName;
+			else
+				pszName = LocalHostName;
+		}
+	} else { /* local hostname is overriden via config */
+		pszName = LocalHostNameOverride;
 	}
+	DBGPRINTF("GenerateLocalHostName uses '%s'\n", pszName);
 	CHKiRet(prop.SetString(propLocalHostName, pszName, ustrlen(pszName)));
 	CHKiRet(prop.ConstructFinalize(propLocalHostName));
 
@@ -296,6 +301,10 @@ static rsRetVal resetConfigVariables(uchar __attribute__((unused)) *pp, void __a
 		free(pszDfltNetstrmDrvrCertFile);
 		pszDfltNetstrmDrvrCertFile = NULL;
 	}
+	if(LocalHostNameOverride != NULL) {
+		free(LocalHostNameOverride);
+		LocalHostNameOverride = NULL;
+	}
 	if(pszWorkDir != NULL) {
 		free(pszWorkDir);
 		pszWorkDir = NULL;
@@ -327,6 +336,7 @@ BEGINAbstractObjClassInit(glbl, 1, OBJ_IS_CORE_MODULE) /* class, version */
 	CHKiRet(regCfSysLineHdlr((uchar *)"defaultnetstreamdrivercafile", 0, eCmdHdlrGetWord, NULL, &pszDfltNetstrmDrvrCAF, NULL));
 	CHKiRet(regCfSysLineHdlr((uchar *)"defaultnetstreamdriverkeyfile", 0, eCmdHdlrGetWord, NULL, &pszDfltNetstrmDrvrKeyFile, NULL));
 	CHKiRet(regCfSysLineHdlr((uchar *)"defaultnetstreamdrivercertfile", 0, eCmdHdlrGetWord, NULL, &pszDfltNetstrmDrvrCertFile, NULL));
+	CHKiRet(regCfSysLineHdlr((uchar *)"localhostname", 0, eCmdHdlrGetWord, NULL, &LocalHostNameOverride, NULL));
 	CHKiRet(regCfSysLineHdlr((uchar *)"optimizeforuniprocessor", 0, eCmdHdlrBinary, NULL, &bOptimizeUniProc, NULL));
 	CHKiRet(regCfSysLineHdlr((uchar *)"hupisrestart", 0, eCmdHdlrBinary, NULL, &bHUPisRestart, NULL));
 	CHKiRet(regCfSysLineHdlr((uchar *)"preservefqdn", 0, eCmdHdlrBinary, NULL, &bPreserveFQDN, NULL));
@@ -350,6 +360,7 @@ BEGINObjClassExit(glbl, OBJ_IS_CORE_MODULE) /* class, version */
 		free(pszWorkDir);
 	if(LocalHostName != NULL)
 		free(LocalHostName);
+	free(LocalHostNameOverride);
 	if(LocalFQDNName != NULL)
 		free(LocalFQDNName);
 	objRelease(prop, CORE_COMPONENT);
