@@ -2,6 +2,7 @@ $ModLoad ../plugins/omstdout/.libs/omstdout
 $IncludeConfig nettest.input.conf	# This picks the to be tested input from the test driver!
 
 $ErrorMessagesToStderr off
+$LocalHostName localhost
 
 # use a special format that we can easily parse in expect
 $template expect,"%PRI%,%syslogfacility-text%,%syslogseverity-text%,%timestamp%,%hostname%,%programname%,%syslogtag%,%msg%\n"
