@@ -1,5 +1,8 @@
 ---------------------------------------------------------------------------
 Version 4.7.4  [v4-???] (rgerhards), 2010-11-??
+- added $LocalHostName config directive
+- bugfix: local hostname was pulled too-early, so that some config 
+  directives (namely FQDN settings) did not have any effect
 - bugfix: atomic increment for msg object may not work correct on all
   platforms. Thanks to Chris Metcalf for the patch
 ---------------------------------------------------------------------------
